@@ -2,6 +2,8 @@
 
 	* src/x_compselect.c: Modified to close when Escape is pressed.
 	(x_compselect_callback_response): Fixed wrong cast for dialog.
+	(COMPSELECT_FILTER_INTERVAL): Added new constant for the timeout
+	interval of the filter as suggested by Peter Clifton.
 
 2006-10-08 Ales Hvezda   <ahvezda@geda.seul.org>
 
